# syndicus

./: Cargo.toml  README.md
examples/basics/: main.rs
src/: lib.rs  log.rs  scope.rs  syndicate.rs
