[package]
name = "syndicus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
rand = "0.8"

[features]
scope = ["dep:tokio"]
log = ["dep:tokio"]
default = ["scope", "log"]
