[package]
name = "syndicus"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Publish/Subscribe with types for topics and subscriber (re)synchronisation"
keywords = ["pubsub", "events", "async", "tokio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
rand = "0.8"
derive_more = { version = "1", features = ["from", "try_into"] }

[features]
scope = ["dep:tokio"]
log = ["dep:tokio"]
default = ["scope", "log"]
